Fix scrollbar on electron

--- a/src/assets/stylesheets/_player.scss
+++ b/src/assets/stylesheets/_player.scss
@@ -1,5 +1,6 @@
 .player {
   padding: 0 !important;
+  z-index: 2;
 
   .resizable-video-container {
     display: inline-table;
